[tool.poetry]
name = "soccer-iq"
version = "0.1.0"
description = "Project to increase soccer IQ and help with demonstrating formations and adjustments"
authors = ["montymi <mcmontanaro01@gmail.com>"]
readme = "README.md"
packages = [{include = "soccer_iq"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
